--- a/public/home.css
+++ b/public/home.css
@@ -1,6 +1,8 @@
 
 * {
   margin: 0;  
+  padding: 0;
+  box-sizing: border-box;
   font-family: sans-serif;
 }
 
@@ -8,7 +10,6 @@
   --b: #0c0c0c;
   --f: #ffffff;
   --m: #797979;
-  box-sizing: border-box;
 }
 
 body {
