--- a/public/styles.css
+++ b/public/styles.css
@@ -23,9 +23,11 @@
 }
 
 body {
-  padding: 5em 3em;
+  padding: 10rem 3rem;
   font-family: Inter, Helvetica, Roboto, sans-serif;
-  font-size: 1.05rem;
+  font-size: 1.1rem;
+  /* font-size: 1.375rem; */
+  font-weight: 500;
   color: var(--f);
   background-color: var(--b);
   max-width: 650px;
@@ -41,7 +43,7 @@ h2 {
 blockquote {
   border-left: 0.4em solid var(--f);
   padding-left: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 1.3em;
 }
 
 ul {
@@ -75,7 +77,7 @@ a:hover {
 
 @media only screen and (max-width: 700px) {
   .date { display: none; }
-  body { padding: 5em 3em; }
+  body { padding: 2.5em 1.5em; }
 }
 
 
@@ -93,11 +95,11 @@ pre {
   padding: 1rem; 
   word-wrap: break-word;
   background-color: #f6f8fa;
-  margin-bottom: 1rem;
+  margin-bottom: 1.3rem;
 }
 
 p {
-  margin-bottom: 1em;
+  margin-bottom: 1.3em;
 }
 
 picture img {
