--- a/public/styles.css
+++ b/public/styles.css
@@ -11,6 +11,7 @@
   --h: #78b1f3; /* hover */
   --m: #777777;
   --l: rgba(121, 121, 121, 0.75);
+  --p-mb: 1.3em;
 }
 
 /* @media (prefers-color-scheme: dark) { */
@@ -36,9 +37,10 @@ body {
   line-height: 1.5em;
 }
 
-h2 {
-  text-align: center;
-  margin-bottom: 2em;
+h3 {
+  text-align: left;
+  margin-bottom: 0.5em;
+  margin-top: calc(var(--p-mb) + 0.5em);
 }
 
 blockquote {
@@ -102,7 +104,7 @@ pre {
 }
 
 p {
-  margin-bottom: 1.3em;
+  margin-bottom: var(--p-mb);
 }
 
 picture { 
