--- a/public/styles.css
+++ b/public/styles.css
@@ -37,7 +37,7 @@ body {
   line-height: 1.5em;
 }
 
-h3 {
+h1,h2,h3 {
   text-align: left;
   margin-bottom: 0.5em;
   margin-top: calc(var(--p-mb) + 0.5em);
